[gd_scene load_steps=2 format=3 uid="uid://dvpd3fdw8nehb"]

[ext_resource type="Script" path="res://addons/jam_launch/editor_plugin/Login.gd" id="1_qc7ch"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qc7ch")

[node name="VB" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -33.0
offset_right = 125.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="PasteButton" type="Button" parent="VB"]
layout_mode = 2
text = "Paste Key from Clipboard"

[node name="Notes" type="RichTextLabel" parent="VB"]
layout_mode = 2
bbcode_enabled = true
text = "[center][color=gray][bgcolor=#00000000]Your developer key can be found in the Jam Launch dashboard:
[url]https://app.jamlaunch.com[/url][/bgcolor][/color][/center]"
fit_content = true

[connection signal="pressed" from="VB/PasteButton" to="." method="_on_paste_button_pressed"]
[connection signal="meta_clicked" from="VB/Notes" to="." method="_on_notes_meta_clicked"]
[connection signal="meta_hover_ended" from="VB/Notes" to="." method="_on_notes_meta_hover_ended"]
[connection signal="meta_hover_started" from="VB/Notes" to="." method="_on_notes_meta_hover_started"]
